--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,10 +1,9 @@
-
 @import './vendor/normalize.css';
 @import '../../node_modules/flexboxgrid/dist/flexboxgrid.min.css';
 @import './vendor/typebase.css';
 
-// Code Block Theme (more at https://raw.githubusercontent.com/isagalaev/highlight.js/master/src/styles/)
-@import './vendor/hljs-atom-one-dark.css';
+// Code Blocks
+@import "../../node_modules/highlight.js/styles/atom-one-dark.css";
 
 // Global Variables
 @import './colors';
