--- a/src/style/blog.scss
+++ b/src/style/blog.scss
@@ -49,30 +49,28 @@ pre.hljs {
     td {
       line-height: 1.4;
     }
+
+    /* Line numbers */
+    td.hljs-ln-numbers {
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      min-width: 20px;
+      user-select: none;
+      text-align: right;
+      font-weight: normal;
+      font-size: 1rem;
+      color: #5c6370;
+      vertical-align: top;
+      padding: 0 0.5rem 0;
+    }
+
+    td.hljs-ln-code {
+      padding-left: 0.5rem;
+    }
   }
-}
-
-/* for block of numbers */
-td.hljs-ln-numbers {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  min-width: 20px;
-  user-select: none;
-  text-align: right;
-  font-weight: normal;
-  color: #5c6370;
-  vertical-align: top;
-  padding: 0 0.5rem;
-
-  /* your custom style here */
-}
-
-/* for block of code */
-td.hljs-ln-code {
-  padding-left: 10px;
 }
 
 
